apps/phpbb3-archive/service.yml
apiVersion: v1
kind: Service
metadata:
  name: phpbb3-archive
  labels:
    app: phpbb3-archive
spec:
  selector:
    app: phpbb3-archive
  ports:
    - port: 80
      targetPort: 80
